Started to implement the database using SQLite.
Added a database closing function to the header. Created basic
implementations of memo_database_{load,close}. Added an m4 macro checking
for SQLite >= 3.0.0. Created a simple database open/close test. Modified
autogen.sh, configure.ac and Makefile.am appropriately, added Makefile.am
files for test subdirectory.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,4 @@
+SUBDIRS=libmemo test
 bin_SCRIPTS=memo
 memo_libdir=$(libdir)/memo
 dist_memo_lib_DATA=general.sh globals.sh sending.sh receiving.sh
