Tests are now optional, indent clean up.
Pass --enable-tests to configure in order to enable tests in test
subdirectory.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,9 @@
-SUBDIRS=libmemo test
+SUBDIRS=libmemo
+if TESTS
+    SUBDIRS+=test
+endif
 bin_SCRIPTS=memo
 memo_libdir=$(libdir)/memo
 dist_memo_lib_DATA=general.sh globals.sh sending.sh receiving.sh
+
+## vim:ts=4:sw=4:et
