Added ACLOCAL_AMFLAGS=-I m4

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,5 +5,6 @@ endif
 bin_SCRIPTS=memo
 memo_libdir=$(libdir)/memo
 dist_memo_lib_DATA=general.sh globals.sh sending.sh receiving.sh
+ACLOCAL_AMFLAGS=-I m4
 
 ## vim:ts=4:sw=4:et
