--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,7 @@
 noinst_PROGRAMS=basic_database_test
 dist_noinst_SCRIPTS=basic_database_test.sh
 basic_database_test_SOURCES=basic_database_test.c
-AM_CFLAGS=-I$(top_srcdir)/libmemo
+AM_CFLAGS=-I$(top_srcdir)/libmemo ${Check_CFLAGS}
+AM_LDFLAGS=${Check_LIBS}
 LDADD=../libmemo/libmemo.la
 TESTS=basic_database_test.sh
