Added the first Check test.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,7 +1,6 @@
-noinst_PROGRAMS=basic_database_test
-dist_noinst_SCRIPTS=basic_database_test.sh
-basic_database_test_SOURCES=basic_database_test.c
+TESTS=tests
+noinst_PROGRAMS=tests
+tests_SOURCES=tests.c
 AM_CFLAGS=-I$(top_srcdir)/libmemo ${Check_CFLAGS}
 AM_LDFLAGS=${Check_LIBS}
 LDADD=../libmemo/libmemo.la
-TESTS=basic_database_test.sh
