--- a/libmemo/Makefile.am
+++ b/libmemo/Makefile.am
@@ -1,3 +1,3 @@
 lib_LTLIBRARIES=libmemo.la
-libmemo_la_SOURCES=libmemo.h database.c word.c
+libmemo_la_SOURCES=libmemo.h database.c word.c xmalloc.c
 pkginclude_HEADERS=libmemo.h
