Added new macros to configure.ac.
Following autoscan's advice.

--- a/configure.ac
+++ b/configure.ac
@@ -25,6 +25,13 @@ AC_PROG_CC
 AC_PROG_AWK
 AC_PROG_SED
 
+AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
+
+AC_FUNC_MALLOC
+AC_FUNC_REALLOC
+
+AC_TYPE_SIZE_T
+
 AX_LIB_SQLITE3
 LDFLAGS="$LDFLAGS $SQLITE3_LDFLAGS"
 CFLAGS="$CFLAGS $SQLITE3_CFLAGS"
