Added required files to libmemo_la_SOURCES.

--- a/libmemo/Makefile.am
+++ b/libmemo/Makefile.am
@@ -1,3 +1,4 @@
 lib_LTLIBRARIES=libmemo.la
-libmemo_la_SOURCES=libmemo.h database.c word.c xmalloc.c
+libmemo_la_SOURCES=libmemo.h database.c database.h word.c xmalloc.c \
+	xmalloc.h macros.h
 pkginclude_HEADERS=libmemo.h
