Tests are built only by make check rule.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,5 +1,5 @@
 TESTS=tests
-noinst_PROGRAMS=tests
+check_PROGRAMS=tests
 tests_SOURCES=tests.c
 AM_CFLAGS=-I$(top_srcdir)/libmemo ${Check_CFLAGS}
 AM_LDFLAGS=${Check_LIBS}
