New functions: add_pair in src and die in common.

--- a/common/Makefile.am
+++ b/common/Makefile.am
@@ -1,3 +1,3 @@
 noinst_LTLIBRARIES = libxmalloc.la
-libxmalloc_la_SOURCES = xmalloc.c xmalloc.h
+libxmalloc_la_SOURCES = xmalloc.c xmalloc.h messages.c messages.h
 noinst_HEADERS = macros.h
