Renamed libxmalloc to libcommon.
It's not only xmalloc's family's library now, as it also contains die
function and may be used for other functions in future.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,4 +4,4 @@ noinst_PROGRAMS=memo
 memo_SOURCES=main.c
 AM_CFLAGS=-I$(top_srcdir)/libmemo -I$(top_srcdir)/common/
 AM_LDFLAGS=-L$(top_srcdir)/libmemo -lmemo
-memo_LDADD = $(top_srcdir)/common/libxmalloc.la
+memo_LDADD = $(top_srcdir)/common/libcommon.la
