--- a/common/Makefile.am
+++ b/common/Makefile.am
@@ -1,3 +1,3 @@
-noinst_LTLIBRARIES = libxmalloc.la
-libxmalloc_la_SOURCES = xmalloc.c xmalloc.h messages.c messages.h
+noinst_LTLIBRARIES = libcommon.la
+libcommon_la_SOURCES = xmalloc.c xmalloc.h messages.c messages.h
 noinst_HEADERS = macros.h
