Small fixes: make distcheck reports no problems.

--- a/libmemo/Makefile.am
+++ b/libmemo/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES=libmemo.la
 libmemo_la_SOURCES=libmemo.h database.c database.h word.c
-libmemo_la_CFLAGS = -I$(top_srcdir)/common/
-libmemo_la_LIBADD = $(top_srcdir)/common/libcommon.la
+libmemo_la_CFLAGS = -I$(srcdir)/../common/
+libmemo_la_LIBADD = $(builddir)/../common/libcommon.la
 pkginclude_HEADERS=libmemo.h
