Documenting, minor changes in code.

--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -94,7 +94,7 @@ EXCLUDE                = config.h
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = 
 EXCLUDE_SYMBOLS        = 
-EXAMPLE_PATH           = 
+EXAMPLE_PATH           = ./doc
 EXAMPLE_PATTERNS       = *
 EXAMPLE_RECURSIVE      = NO
 IMAGE_PATH             = 
