--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,3 +4,4 @@ tests_SOURCES=tests.c
 AM_CFLAGS=-I$(top_srcdir)/libmemo ${Check_CFLAGS}
 AM_LDFLAGS=${Check_LIBS}
 LDADD=../libmemo/libmemo.la
+EXTRA_DIST=reply1.eml
