--- a/libmemo/Makefile.am
+++ b/libmemo/Makefile.am
@@ -1,5 +1,6 @@
 lib_LTLIBRARIES=libmemo.la
-libmemo_la_SOURCES=libmemo.h database.c database.h word.c messaging.c
+libmemo_la_SOURCES=libmemo.h database.c database.h word.c messaging.c \
+                   messaging.h
 libmemo_la_CFLAGS = -I$(srcdir)/../common/
 libmemo_la_LIBADD = $(builddir)/../common/libcommon.la
 pkginclude_HEADERS=libmemo.h
