Prepared a simple ikiwiki based website.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,9 @@ if WITH_CHECK
     SUBDIRS+=test
     DISTCHECK_CONFIGURE_FLAGS=--with-check
 endif
+if ENABLE_WEBSITE
+    SUBDIRS+=website
+endif
 ACLOCAL_AMFLAGS=-I m4
 
 ## vim:ts=4:sw=4:et
