--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -6,7 +6,7 @@
 DOXYFILE_ENCODING      = UTF-8
 PROJECT_NAME           = memo
 PROJECT_NUMBER         = @VERSION@
-OUTPUT_DIRECTORY       = doc
+OUTPUT_DIRECTORY       = doc/doxygen
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
 BRIEF_MEMBER_DESC      = YES
