memo binary is now installed in bindir.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,4 @@
-# It should be bin_PROGRAMS when this C implementation will be ready to
-# replace the version written in bash.
-noinst_PROGRAMS=memo
+bin_PROGRAMS=memo
 memo_SOURCES=main.c
 AM_CFLAGS=-I$(srcdir)/../libmemo -I$(srcdir)/../common/
 AM_LDFLAGS=-L$(builddir)/../libmemo -lmemo
