--- a/website/Makefile.am
+++ b/website/Makefile.am
@@ -2,6 +2,7 @@ EXTRA_DIST=Memo.setup index.mdwn
 all: clean
 	if test ! -d dest; then mkdir dest; fi
 	${IKIWIKI} -setup ${srcdir}/Memo.setup --templatedir tmpl
+	rm -rf dest/{Makefile{,.am,.in},Memo.setup,tmpl,memo,recentchanges}
 	ln -s ${builddir}/../../doc/memo.html dest/manual
 	rm -f dest/manual/memo.html
 	ln -s ${builddir}/../../doc/doxygen/html dest/techdoc
